# ROBOT_2026

./: LICENSE
firmware/ROBOT_MAZE/: CMakeLists.txt
firmware/ROBOT_MAZE/components/MPU6050/: CMakeLists.txt
firmware/ROBOT_MAZE/main/: CMakeLists.txt  README.md  config.h  main.c  robot_controller.h  robot_kinematics.c  robot_kinematics.h  robot_sensor.c  robot_sensor.h
firmware/ROBOT_SUMO_ARDUIN_IDE/: readme.md  sumo_final_final.ino
firmware/Robot_Maze/: CMakeLists.txt
firmware/Robot_Maze/main/: main.c
firmware/TEST_BTS7960/: CMakeLists.txt
firmware/TEST_BTS7960/main/: CMakeLists.txt  config.h  main.c
firmware/TEST_PCA9685/: CMakeLists.txt
firmware/TEST_PCA9685/main/: CMakeLists.txt  config.h  main.c
firmware/TEST_ROBOT_KINEMATICS/: CMakeLists.txt
firmware/TEST_ROBOT_KINEMATICS/main/: CMakeLists.txt  config.h  main.c  pid_control.c  pid_control.h  robot_controller.c  robot_controller.h  sensor_mpu6050.c  sensor_mpu6050.h  sensor_task.c  sensor_task.h
firmware/TEST_VL53L0X/: CMakeLists.txt
firmware/TEST_VL53L0X/components/VL53L0X/: CMakeLists.txt  README.md
firmware/TEST_VL53L0X/components/VL53L0X/src/: vl53l0x_espidf.c  vl53l0x_platform_espidf.c
firmware/TEST_VL53L0X/main/: CMakeLists.txt  config.h  main.c
firmware/Test_MPU6050/: .gitignore  CMakeLists.txt
firmware/Test_MPU6050/main/: CMakeLists.txt  main.c
firmware/vidu/: CMakeLists.txt
hardware/: TaiLieuGiaCongPCB.txt
hardware/3D Model/: ZWL-FP Motor v5.step
hardware/3Dmodel/: khuon.stl  wheel.stl
hardware/SCH_PCB/: 1-PCB_PCB_robot_maze_5.json  1-Schematic_robot_maze.json
(+14 files in other folders)
